# greatfootballpool

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  README.md  bump_version.sh  docker-compose.yaml  greatfootballpool.sublime-project  nginx.conf  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: dependabot.yml
.github/actions/lint/: action.yml
.github/actions/pip_install/: action.yml
.github/workflows/: close_issues.yml  deploy.yml  deploy_bin_bot.yml  deploy_flask.yml  docker-image.yaml  get_settings_json.yml  lint.yml  lint_only.yml  pip_check.yml  python-package.yml  test.yml  todo.yml
.github/workflows/lint/: action.yml
.run/: Docker Dev Container.run.xml  Flask App Dev (5001).run.xml  Set Doppler ENV to Dev.run.xml
conf/: discord_bot_service_template.plist  template.env  tgfp_paths.pth
flask_site/: app.py  config.py  passenger_wsgi.py  run.sh
flask_site/include/: init.py  tgfp.py  yahoo.py
flask_site/instance/: config.py
flask_site/static/: mainstyle.css
flask_site/templates/: allpicks.j2  allpicksbase.j2  base.j2  clan_draft.j2  clan_standings.j2  error_picks.j2  home.j2  join_clan.j2  login.j2  manage_clan.j2  no_player.j2  picks.j2  picks_form.j2  profile.j2  rules.j2  standings.j2
image_assets/: discord_logo.pxm
lib/: common_init.py
local_tests/: discord_bot_tester.py  init.py  test_discord_bot_send.py  test_discord_bot_tester.py
tests/: discord_bot_tester.py  init.py  test_discord_bot_tester.py  test_get_settings.py  test_mongo_backup.py  test_tgfp.py  test_tgfp_game.py  test_tgfp_pick.py  test_tgfp_player.py  test_tgfp_team.py
