[tool.poetry]
name = "greatfootballpool"
version = "1.1.3"
description = "The Great Football Pool flask web site"
authors = ["John Sturgeon <john.sturgeon@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
sentry-sdk = "^1.9.5"
bson = "^0.5.10"
tgfp-lib = "^1.3.3"
gunicorn = "^20.1.0"
Flask-Discord = "^0.1.69"
blinker = "^1.5"
doppler-env = "^0.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
